{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 59,
  "lineage": "cbfcfb06-5824-452a-d8f2-692c72976cdf",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:629115657628:security-group/sg-0342eb8959cb904b2",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-0342eb8959cb904b2",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-005d99d704a077c2c"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "tic-tac-toe-cluster-20250706112829397100000008",
            "name_prefix": "tic-tac-toe-cluster-",
            "owner_id": "629115657628",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tic-tac-toe-cluster"
            },
            "tags_all": {
              "Name": "tic-tac-toe-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-0db41caf4025bbc7e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:629115657628:security-group/sg-005d99d704a077c2c",
            "description": "EKS node group security group - used by nodes to communicate with the cluster API Server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-005d99d704a077c2c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 4443/tcp webhook",
                "from_port": 4443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0342eb8959cb904b2"
                ],
                "self": false,
                "to_port": 4443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 6443/tcp webhook",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0342eb8959cb904b2"
                ],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 8443/tcp webhook",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0342eb8959cb904b2"
                ],
                "self": false,
                "to_port": 8443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 9443/tcp webhook",
                "from_port": 9443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0342eb8959cb904b2"
                ],
                "self": false,
                "to_port": 9443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0342eb8959cb904b2"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0342eb8959cb904b2"
                ],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS UDP",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node ingress on ephemeral ports",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              }
            ],
            "name": "tic-tac-toe-node-2025070611282940690000000b",
            "name_prefix": "tic-tac-toe-node-",
            "owner_id": "629115657628",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tic-tac-toe-node",
              "kubernetes.io/cluster/tic-tac-toe": "owned"
            },
            "tags_all": {
              "Name": "tic-tac-toe-node",
              "kubernetes.io/cluster/tic-tac-toe": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0db41caf4025bbc7e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-1480945630",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0342eb8959cb904b2",
            "security_group_rule_id": "sgr-0934f03644906d383",
            "self": false,
            "source_security_group_id": "sg-005d99d704a077c2c",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks-vpc.aws_vpc.this",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-3524147040",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-005d99d704a077c2c",
            "security_group_rule_id": "sgr-0fc2f1ac8a69af23e",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks-vpc.aws_vpc.this",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-1239102637",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-005d99d704a077c2c",
            "security_group_rule_id": "sgr-0cde2e89dd780752e",
            "self": false,
            "source_security_group_id": "sg-0342eb8959cb904b2",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks-vpc.aws_vpc.this",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-1392170854",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-005d99d704a077c2c",
            "security_group_rule_id": "sgr-065591e1ce81e4984",
            "self": false,
            "source_security_group_id": "sg-0342eb8959cb904b2",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks-vpc.aws_vpc.this",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-2612572400",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-005d99d704a077c2c",
            "security_group_rule_id": "sgr-06dc57e107d801c9b",
            "self": false,
            "source_security_group_id": "sg-0342eb8959cb904b2",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks-vpc.aws_vpc.this",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-2296679633",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-005d99d704a077c2c",
            "security_group_rule_id": "sgr-00cdd2e408c1ae426",
            "self": false,
            "source_security_group_id": "sg-0342eb8959cb904b2",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks-vpc.aws_vpc.this",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-3963993882",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-005d99d704a077c2c",
            "security_group_rule_id": "sgr-020fd77d5c3836cb8",
            "self": false,
            "source_security_group_id": "sg-0342eb8959cb904b2",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks-vpc.aws_vpc.this",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-4170294926",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-005d99d704a077c2c",
            "security_group_rule_id": "sgr-02dc2c6dd1bd776d2",
            "self": false,
            "source_security_group_id": "sg-0342eb8959cb904b2",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks-vpc.aws_vpc.this",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-2385426299",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-005d99d704a077c2c",
            "security_group_rule_id": "sgr-0102489ac0ddc37a8",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks-vpc.aws_vpc.this",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-169997140",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-005d99d704a077c2c",
            "security_group_rule_id": "sgr-0379db8d63160bd8c",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks-vpc.aws_vpc.this",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-2927513787",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-005d99d704a077c2c",
            "security_group_rule_id": "sgr-073ceb0dfe659201b",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks-vpc.aws_vpc.this",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks-vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:629115657628:network-acl/acl-07863a52db721e0a6",
            "default_network_acl_id": "acl-07863a52db721e0a6",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-07863a52db721e0a6",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "629115657628",
            "subnet_ids": [
              "subnet-046889b3a3053f396",
              "subnet-04ac0b235942e2be4",
              "subnet-052be5f462407e026",
              "subnet-0f9718e1334f36a60"
            ],
            "tags": {
              "Name": "ttt-main-default",
              "kubernetes": "ttt-game",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "ttt-main-default",
              "kubernetes": "ttt-game",
              "terraform": "true"
            },
            "vpc_id": "vpc-0db41caf4025bbc7e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks-vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks-vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:629115657628:route-table/rtb-0a74547574b8bcd0a",
            "default_route_table_id": "rtb-0a74547574b8bcd0a",
            "id": "rtb-0a74547574b8bcd0a",
            "owner_id": "629115657628",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "ttt-main-default",
              "kubernetes": "ttt-game",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "ttt-main-default",
              "kubernetes": "ttt-game",
              "terraform": "true"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0db41caf4025bbc7e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks-vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks-vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:629115657628:security-group/sg-001aab0d514fa775b",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-001aab0d514fa775b",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "629115657628",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ttt-main-default",
              "kubernetes": "ttt-game",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "ttt-main-default",
              "kubernetes": "ttt-game",
              "terraform": "true"
            },
            "vpc_id": "vpc-0db41caf4025bbc7e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks-vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks-vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02613d03f0dbd1948",
            "arn": "arn:aws:ec2:us-east-1:629115657628:elastic-ip/eipalloc-02613d03f0dbd1948",
            "association_id": "eipassoc-02779501744e1ea1e",
            "domain": "vpc",
            "id": "eipalloc-02613d03f0dbd1948",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0902480b8a9e7a687",
            "private_dns": "ip-10-10-10-78.ec2.internal",
            "private_ip": "10.10.10.78",
            "public_dns": "ec2-54-225-127-204.compute-1.amazonaws.com",
            "public_ip": "54.225.127.204",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "ttt-main-us-east-1a",
              "kubernetes": "ttt-game",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "ttt-main-us-east-1a",
              "kubernetes": "ttt-game",
              "terraform": "true"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.eks-vpc.aws_internet_gateway.this",
            "module.eks-vpc.aws_vpc.this",
            "module.eks-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks-vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:629115657628:internet-gateway/igw-06c5cd6c8c8ab291e",
            "id": "igw-06c5cd6c8c8ab291e",
            "owner_id": "629115657628",
            "tags": {
              "Name": "ttt-main",
              "kubernetes": "ttt-game",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "ttt-main",
              "kubernetes": "ttt-game",
              "terraform": "true"
            },
            "vpc_id": "vpc-0db41caf4025bbc7e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks-vpc.aws_vpc.this",
            "module.eks-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks-vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02613d03f0dbd1948",
            "association_id": "eipassoc-02779501744e1ea1e",
            "connectivity_type": "public",
            "id": "nat-07cb827fae9e4252b",
            "network_interface_id": "eni-0902480b8a9e7a687",
            "private_ip": "10.10.10.78",
            "public_ip": "54.225.127.204",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-046889b3a3053f396",
            "tags": {
              "Name": "ttt-main-us-east-1a",
              "kubernetes": "ttt-game",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "ttt-main-us-east-1a",
              "kubernetes": "ttt-game",
              "terraform": "true"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.eks-vpc.aws_eip.nat",
            "module.eks-vpc.aws_internet_gateway.this",
            "module.eks-vpc.aws_subnet.public",
            "module.eks-vpc.aws_vpc.this",
            "module.eks-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks-vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-003a323a39d93e45a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-07cb827fae9e4252b",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-003a323a39d93e45a",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.eks-vpc.aws_eip.nat",
            "module.eks-vpc.aws_internet_gateway.this",
            "module.eks-vpc.aws_nat_gateway.this",
            "module.eks-vpc.aws_route_table.private",
            "module.eks-vpc.aws_subnet.public",
            "module.eks-vpc.aws_vpc.this",
            "module.eks-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks-vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-06c5cd6c8c8ab291e",
            "id": "r-rtb-08eb9c48af105d6fd1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08eb9c48af105d6fd",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.eks-vpc.aws_internet_gateway.this",
            "module.eks-vpc.aws_route_table.public",
            "module.eks-vpc.aws_vpc.this",
            "module.eks-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:629115657628:route-table/rtb-003a323a39d93e45a",
            "id": "rtb-003a323a39d93e45a",
            "owner_id": "629115657628",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-07cb827fae9e4252b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ttt-main-private",
              "kubernetes": "ttt-game",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "ttt-main-private",
              "kubernetes": "ttt-game",
              "terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0db41caf4025bbc7e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.eks-vpc.aws_vpc.this",
            "module.eks-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:629115657628:route-table/rtb-08eb9c48af105d6fd",
            "id": "rtb-08eb9c48af105d6fd",
            "owner_id": "629115657628",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06c5cd6c8c8ab291e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ttt-main-public",
              "kubernetes": "ttt-game",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "ttt-main-public",
              "kubernetes": "ttt-game",
              "terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0db41caf4025bbc7e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.eks-vpc.aws_vpc.this",
            "module.eks-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09d35aec6e150a8db",
            "route_table_id": "rtb-003a323a39d93e45a",
            "subnet_id": "subnet-0f9718e1334f36a60"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.eks-vpc.aws_route_table.private",
            "module.eks-vpc.aws_subnet.private",
            "module.eks-vpc.aws_vpc.this",
            "module.eks-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01b66888ac87536a3",
            "route_table_id": "rtb-003a323a39d93e45a",
            "subnet_id": "subnet-04ac0b235942e2be4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.eks-vpc.aws_route_table.private",
            "module.eks-vpc.aws_subnet.private",
            "module.eks-vpc.aws_vpc.this",
            "module.eks-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0de23dacf38547464",
            "route_table_id": "rtb-08eb9c48af105d6fd",
            "subnet_id": "subnet-046889b3a3053f396"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.eks-vpc.aws_route_table.public",
            "module.eks-vpc.aws_subnet.public",
            "module.eks-vpc.aws_vpc.this",
            "module.eks-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f8ed0dab4d42549b",
            "route_table_id": "rtb-08eb9c48af105d6fd",
            "subnet_id": "subnet-052be5f462407e026"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.eks-vpc.aws_route_table.public",
            "module.eks-vpc.aws_subnet.public",
            "module.eks-vpc.aws_vpc.this",
            "module.eks-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:629115657628:subnet/subnet-0f9718e1334f36a60",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.10.110.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f9718e1334f36a60",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "629115657628",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ttt-main-private-us-east-1a",
              "kubernetes": "ttt-game",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "ttt-main-private-us-east-1a",
              "kubernetes": "ttt-game",
              "terraform": "true"
            },
            "vpc_id": "vpc-0db41caf4025bbc7e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.eks-vpc.aws_vpc.this",
            "module.eks-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:629115657628:subnet/subnet-04ac0b235942e2be4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.10.120.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04ac0b235942e2be4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "629115657628",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ttt-main-private-us-east-1b",
              "kubernetes": "ttt-game",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "ttt-main-private-us-east-1b",
              "kubernetes": "ttt-game",
              "terraform": "true"
            },
            "vpc_id": "vpc-0db41caf4025bbc7e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.eks-vpc.aws_vpc.this",
            "module.eks-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:629115657628:subnet/subnet-046889b3a3053f396",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.10.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-046889b3a3053f396",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "629115657628",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ttt-main-public-us-east-1a",
              "kubernetes": "ttt-game",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "ttt-main-public-us-east-1a",
              "kubernetes": "ttt-game",
              "terraform": "true"
            },
            "vpc_id": "vpc-0db41caf4025bbc7e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.eks-vpc.aws_vpc.this",
            "module.eks-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:629115657628:subnet/subnet-052be5f462407e026",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.10.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-052be5f462407e026",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "629115657628",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ttt-main-public-us-east-1b",
              "kubernetes": "ttt-game",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "ttt-main-public-us-east-1b",
              "kubernetes": "ttt-game",
              "terraform": "true"
            },
            "vpc_id": "vpc-0db41caf4025bbc7e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.eks-vpc.aws_vpc.this",
            "module.eks-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks-vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:629115657628:vpc/vpc-0db41caf4025bbc7e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-07863a52db721e0a6",
            "default_route_table_id": "rtb-0a74547574b8bcd0a",
            "default_security_group_id": "sg-001aab0d514fa775b",
            "dhcp_options_id": "dopt-05cb4e99c5a6f2e22",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0db41caf4025bbc7e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a74547574b8bcd0a",
            "owner_id": "629115657628",
            "tags": {
              "Name": "ttt-main",
              "kubernetes": "ttt-game",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "ttt-main",
              "kubernetes": "ttt-game",
              "terraform": "true"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}